[gd_scene load_steps=5 format=3 uid="uid://wsuur7v3e8t6"]

[ext_resource type="Script" uid="uid://b0rre48dj0sjb" path="res://scripts/splash_controller.gd" id="1_4gp4q"]
[ext_resource type="Shader" uid="uid://dwosbw5glmsrt" path="res://shaders/splash_screen.gdshader" id="2_3mj2l"]
[ext_resource type="Texture2D" uid="uid://ccwn083im7gst" path="res://assets/images/splash.png" id="3_vbcv6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m0ilf"]
shader = ExtResource("2_3mj2l")
shader_parameter/time = 0.0
shader_parameter/swirl_speed = 0.5
shader_parameter/screen_size = Vector2(0, 0)

[node name="SplashScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4gp4q")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_m0ilf")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Splasht" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_vbcv6")
expand_mode = 2
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -39.0
offset_right = 23.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"
